--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.8",
-    "react-navigation-stack": "^2.3.13"
+    "react-navigation-stack": "^2.3.13",
+    "expo-font": "~8.1.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
