--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
+    "@use-expo/font": "^2.0.0",
     "axios": "^0.19.2",
     "expo": "~37.0.3",
+    "expo-font": "~8.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
@@ -20,8 +22,7 @@
     "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.8",
-    "react-navigation-stack": "^2.3.13",
-    "expo-font": "~8.1.0"
+    "react-navigation-stack": "^2.3.13"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
