--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.8",
-    "react-navigation-stack": "^2.3.13",
-    "expo-file-system": "~8.1.0"
+    "react-navigation-stack": "^2.3.13"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "babel-plugin-inline-dotenv": "^1.5.0",
     "babel-preset-expo": "~8.1.0"
   },
   "private": true
