--- a/package.json
+++ b/package.json
@@ -5,7 +5,16 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*)"
+    ],
+    "timers": "fake",
+    "testEnvironment": "jsdom"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
@@ -27,7 +36,9 @@
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "babel-plugin-inline-dotenv": "^1.5.0",
-    "babel-preset-expo": "~8.1.0"
+    "babel-preset-expo": "~8.1.0",
+    "jest-expo": "^37.0.0",
+    "react-test-renderer": "^16.13.1"
   },
   "private": true
 }
